<resources>
    <string name="app_name">software_1</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_name_UnDone">UnDone</string>
    <string name="tab_name_Done">Done</string>
    <string name="tab_name_All">All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Untitled">Untitled</string>
    <string name="Untitled_firstLetter">U</string>
    <string name="title"> Title</string>
    <string name="Desc">Description</string>
    <string name="Date">Date</string>
    <string name="Hour">hour</string>
    <string name="Add">Add</string>
    <string name="Before_button">Befor</string>
    <string name="Save">Save</string>
    <string name="Remove">Remove</string>
    <string name="setTime_btn">Set Time</string>
    <string name="timePicker_string">Enter your task time</string>
    <string name="datePicker_string">Enter your task date</string>
    <string name="set_date">Set Date</string>
    <string name="OK">ok</string>
    <string name="taskTime_button_add">Your task Time is %1$s</string>
    <string name="taskDate_button_add">Your task Date is %1$s</string>
    <string name="edit">Edit</string>
    <string name="remove_message">Do you really want to remove This task ?????</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="input_error_message">Invalid input please try again !!!</string>
    <string name="Done">Done</string>
    <string name="date_time_textView">   Date= %1$s \n Hour= %2$s</string>
    <string name="time_string">%1$s:%2$s</string>
    <string name="username">userName</string>
    <string name="password">password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="undefined">Undefined</string>
    <string name="taskTime_button_edit">Your task Time was %1$s</string>
    <string name="taskDate_button_edit">Your task Date was %1$s</string>
    <string name="action_search">Search</string>
    <string name="btn_register">Register</string>
    <string name="notEqualPassword">Your Confirm Pasword is not Equal to your Password</string>
    <string name="registerMessage">You have registered successfully </string>
    <string name="LoginMessage"> Welcome</string>
    <string name="firstName">firstName</string>>
    <string name="lastName">lastName</string>>
    <string name="btn_login">login</string>
    <string name="welcome_message">Welcome</string>
    <string name="not_registered_message">I have not already registered</string>
    <string name="invalidLogin">userName or Password is Invalid</string>
    <string name="delete_item">Delete ALL</string>
    <string name="noLoginButton">Use program for test</string>
    <string name="without_login_message">Your tasks will be lost \n Do you want to register?</string>
    <string name="delete_message">Delete message</string>
    <string name="Cancel">cancel</string>
    <string name="TaskTime">Task Time</string>
    <string name="TaskDate">Task Date</string>
    <string name="setTimeAndDate">set Time and date</string>
    <string name="reapeatative_UserName_text"> This UserName has been Selected please Try again</string>

    <string name="share_text">Task Title: %1$s \n
        Task Description: %2$s
        \n Date of Task : %3$s
        \n The task state is %4$s</string>
    <string name="take_Photo">Take a photo</string>
    <string name="search_message">Search your task</string>
    <string name="choose_Photo">Choose from Device</string>
    />
</resources>
