<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
   android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"

    tools:context="com.example.admin.software_1.controllers.fragments.AddFragment">


    <ImageView
        android:id="@+id/chooseImage_img_AddFrgment"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@mipmap/camera" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/take_image_btn_AddFragment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/gallery_thumb"
        android:text="@string/take_Photo"
        android:layout_marginRight="8dp"/>
    <Button
        android:id="@+id/choose_image_btn_AddFragment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/gallery_thumb"
        android:text="@string/choose_Photo" />
    </LinearLayout>
    <EditText
        android:id="@+id/title_editText_Addfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:maxLength="30" />

    <EditText
        android:id="@+id/description_editText_Addfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/Desc"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="70"
        android:minLines="3"
        android:singleLine="false" />

    <CheckBox
        android:id="@+id/taskType_checkbox_Addfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/tab_name_Done"
/>

    <Button
        android:id="@+id/setDate_btn_AddFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
 />

    <Button
        android:id="@+id/setTime_btn_AddFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTime_btn"
/>

    <Button
        android:id="@+id/add_button_Addfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add"
 />

</LinearLayout>
