<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.software_1.ShowTaskInfoFragmnet"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        style="@style/show_detail_textView"/>

    <TextView
        android:id="@+id/title_textView_ShowTaskInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Desc"
        style="@style/show_detail_textView"
/>
    <TextView
        android:id="@+id/description_textView_ShowTaskInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        style="@style/show_detail_textView"/>
    <TextView
        android:id="@+id/date_textView_ShowTaskInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hour"
        style="@style/show_detail_textView"/>
    <TextView
        android:id="@+id/hour_textView_ShowTaskInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/taskType_checkbox_ShowTaskInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_name_Done" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button_ShowTaskInfoFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Add" />
        <Button
            android:id="@+id/edit_button_ShowTaskInfoFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />
        <Button
            android:id="@+id/remove_button_ShowTaskInfoFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Remove"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
