<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.admin.software_1.controllers.fragments.RegisterFragment">


    <EditText
        android:id="@+id/firstName_edt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName" />
    <EditText
        android:id="@+id/lastName_edt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName" />

    <EditText
        android:id="@+id/username_edt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/password_edt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword_edt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/register_btn_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
      />
    <TextView
        android:id="@+id/error_txt_registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Remove_dialog_red"
   />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>





</LinearLayout>
