<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    tools:context="com.example.admin.software_1.controllers.fragments.EditFragment">




        <TextView
            style="@style/show_detail_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_editText_EditFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12sp" />

        <TextView

            style="@style/show_detail_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Desc" />

        <EditText
            android:id="@+id/description_editText_EditFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12sp" />




        <TextView
            style="@style/show_detail_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Date" />

        <Button
            android:id="@+id/setDate_btn_EditFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/set_date"
            android:textSize="8sp" />

        <TextView
            style="@style/show_detail_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Hour" />

        <Button
            android:id="@+id/setTime_btn_EditFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/setTime_btn"
            android:textSize="8sp" />

        <CheckBox
            android:id="@+id/taskType_checkbox_EditFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tab_name_Done"
            android:textSize="10sp" />




    <Button
        android:id="@+id/done_button_EditFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Done"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="247dp" />

</LinearLayout>
